Changelog
=========

In next release...

* Fail gracefully (and informatively) when a layout cannot render.
  [malthe]

* Move the "split column" action to the row.
  [malthe]

* Cleaned up layout stylesheet.
  [malthe]

* Fixed issue that prevented inline-editing from working properly.
  [malthe]

* Changes to user interface appearance.
  [malthe]

* Added form protection.
  [malthe]

* Rewired compose view to simplify templates and avoid needless
  indirection.
  [malthe]

* Rename 'Manage page' to 'Compose'.
  [malthe]

* Move settings fields to the settings schemata. Added field descriptions.
  [malthe]

1.2.3 (2009-11-02)
------------------

* Fixed search bug mentioned in #57 when adding alias.
  [glenfant]

* Worked around IE CSS bugs mentioned in issue #60. Thanks to Kevin Deldycke.
  [glenfant]

* Synched all .po with the latest labels and updated the ``*-fr.po``
  files. Collage translators, new .po files are wawiting for your inputs.
  [glenfant]

* Following jensens change on types whitelist, change the test accordingly.
  [glenfant]

* On alias target removal, the alias layout is reset to "standard". This gives a
  chance to content authors to delete the alias, rather tha saying "Error:
  Layout not found". This fixes #63
  [glenfant]

* Update JavaScript to no longer use reserved function postMessage. This fixes
  #54.
  [dunlapm]

* Update french translation (tiny semantic improvement).
  [kdeldycke]

* Avoid BadRequest error while adding alias_whitelist property in
  upgrade step if this property already exists.  You should usually be
  able to run an upgrade step a second time without fail.
  [maurits]

* Added a useful very reduced 'minimal' view for files.
  [jensens]

* Removed type 'Folder' from Collage properties -> types whitelist. It does not
  make much sense (and will confuse users) to add a folder direct inside a 
  Collage. if someone really needs it, it can be enabled with minor effort.
  [jensens]
