@@ -30,7 +30,6 @@ class CollageSiteOptions(SchemaAdapterBase):
     use_whitelist = ProxyFieldProperty(ICollageSiteOptions['use_whitelist'])
     types_whitelist = ProxyFieldProperty(ICollageSiteOptions['types_whitelist'])
     alias_whitelist = ProxyFieldProperty(ICollageSiteOptions['alias_whitelist'])
-    alias_search_limit = ProxyFieldProperty(ICollageSiteOptions['alias_search_limit'])
 
     def __init__(self, context):
         super(CollageSiteOptions, self).__init__(context)
