@@ -7,50 +7,107 @@
   <form class="collage-existing-items"
         onsubmit="return false"
         method="get"
-	tal:define="here_url here/absolute_url"
-	tal:attributes="action string:${here_url}/existing-items-form">
-    <div class="field">
-      <label i18n:translate="label_content_type"
-	     for="portal_type">Content type</label>
-      <select name="portal_type" style="font-size:80%"
-	      tal:define="allowedTypes view/listEnabledTypes">
-	<option i18n:translate="label_all_content_types"
-		value="">All</option>
-	<option tal:repeat="ctype allowedTypes"
-		tal:attributes="value ctype/id;
-				selected ctype/selected"
-		tal:content="ctype/title">Type-name</option>
-      </select>
-    </div>
+	    tal:define="here_url here/absolute_url;
+                    items python: options['items'];
+                    batch python: options['batch'];
+                    batch_base_url request/getURL;
+                    portal_url view/portal_url;"
+	    tal:attributes="action string:${here_url}/existing-items-form">
+
+    <!-- search -->
+
     <div class="field">
       <label i18n:domain="plone" i18n:translate="label_search_text"
-	     for="portal_type">Search Text</label>
-      <input type="text" name="SearchableText" tal:attributes="value request/SearchableText|nothing" />
+	         for="portal_type">Search Text</label>
+      <br/>
+      <input tal:condition="options/path"
+             type="hidden" name="path" tal:attributes="value options/path" />
+      <input type="text"
+             id="searchGadget"
+             name="SearchableText"
+             size="25"
+             value=""
+             tal:attributes="value request/SearchableText|nothing;"
+             />
+      <input class="searchButton"
+             type="submit"
+             name="submit"
+             value="Search"
+             i18n:domain="plone"
+             i18n:attributes="value label_search;"
+             />
     </div>
+
+    <!-- breadcrums -->
+
+    <div class="breadcrumbs"
+         tal:define="isRTL here/@@plone_portal_state/is_rtl;
+                     crumbs view/breadcrumbs;">
+
+      <img tal:attributes="src string:${here/portal_url}/logoIcon.gif" />
+
+      <tal:crums tal:repeat="crumb crumbs">
+
+        <a class="get" tal:attributes="href string:${here_url}/existing-items-form?path=${crumb/path};"><span tal:content="string:${crumb/title}">Breadcrumb Title</span></a>
+
+        <span tal:condition="not: repeat/crumb/end"
+              class="breadcrumbSeparator">
+          <tal:ltr condition="not: isRTL">&rarr;</tal:ltr>
+          <tal:rtl condition="isRTL">&larr;</tal:rtl>
+        </span>
+
+      </tal:crums>
+
+      <span class="discreet" tal:condition="options/query">
+        (<tal:block i18n:translate="">searching this path and below</tal:block>)
+      </span>
+    </div>
+
     <ul i18n:domain="plone" class="collage-content-menu"
-        tal:define="focushint string:View this item in a new window;
-                    portal_url view/portal_url">
-      <li tal:repeat="item view/getItems" class="visualIcon">
+        tal:define="focushint string:View this item in a new window;">
+      <tal:no-items condition="not: items">
+        <p tal:condition="not: options/query" class="discreet" i18n:translate="">
+          Empty folder.
+        </p>
+        <p tal:condition="options/query" class="discreet" i18n:translate="">
+          No results found.
+        </p>
+      </tal:no-items>
+
+      <tal:items repeat="item items">
+        <li tal:define="odd repeat/item/odd;
+                        css python: odd and 'odd' or 'even'"
+            tal:attributes="class string:visualIcon $css">
+
          <img tal:attributes="src string:${portal_url}/${item/icon};
-			      title item/type; alt item/type" i18n:attributes="title; alt" />
-	    <a href="#" class="#"
-           tal:attributes="href string:${here_url}/insert-alias?uid=${item/UID};
-                           title item/description;
-                           class string:${item/link_css_class} post">
-	      <tal:title content="item/title">Title</tal:title>
-	      <img tal:attributes="src string:${portal_url}/++resource++collage-resources/icon-insert.gif" alt="Insert" />
-	    </a>
-            &nbsp;
-            <a href=""
-               target="_blank"
-               tal:attributes="href item/target_url;
-                               title focushint;
-                               alt focushint"
-               i18n:attributes="title; alt">
-              <img src=""
-                   tal:attributes="src string:${portal_url}/search_icon.gif" />
-            </a>
+			                  title item/type; alt item/type" i18n:attributes="title; alt" />
+
+         <a href="#"
+            tal:attributes="href string:${here_url}/existing-items-form?path=${item/path};
+                            title item/description;
+                            class string:${item/link_css_class} get"
+            i18n:attributes="title"
+            tal:omit-tag="not: item/folderish">
+	       <tal:title content="item/title">Title</tal:title>
+
+	     </a>
+         <div style="float: right">
+           <a href="#"
+              tal:attributes="href string:${item/target_url};
+                              class string:${item/link_css_class}"
+              i18n:translate="">View</a>
+           |
+	       <a href="#" class="post" 
+              tal:attributes="href string:${here_url}/insert-alias?uid=${item/UID}">
+             <span tal:omit-tag="" i18n:translate="">Insert</span>
+             <img tal:attributes="src string:${portal_url}/++resource++collage-resources/icon-insert.gif" alt="Insert" />
+           </a>
+         </div>
       </li>
+      </tal:items>
     </ul>
+
+    <metal:batch use-macro="context/batch_macros/macros/navigation" />
+
   </form>
 </div>
